2025-10-23  Oliver Kiddle  <opk@zsh.org>

	* 54000: Completion/BSD/Command/_bectl: new completion

2025-10-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Mike Gilbert: 53992: Src/utils.c, configure.ac: check for
	declaration of fpurge() instead of its link-ability (as a
	workaround of the problem of musl-libc)

2025-10-02  Oliver Kiddle  <opk@zsh.org>

	* 53985: Completion/Unix/Command/_git: update to 2.51

2025-09-30  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* Christoph Erhardt: 53981: Completion/Redhat/Command/_dnf5:
	fix completion of local rpm files

2025-09-29  Oliver Kiddle  <opk@zsh.org>

	* Ryan Rotter: github #145: Completion/Unix/Command/_install:
	update options completion

	* 53970 based on github #131 by Christopher Bock:
	Completion/Unix/Command/_zfs: complete all dataset properties
	for zfs allow and support comma separated list for zfs scripts

	* 53969: Completion/Unix/Command/_date,
	Completion/Unix/Command/_env, Completion/Unix/Command/_ping:
	completion updates for Unix utilities in macOS 15.5

	* 53968: Completion/Linux/Command/_blkid,
	Completion/Linux/Command/_lvm2: new lvm2 and blkid completions

2025-09-25  Oliver Kiddle  <opk@zsh.org>

	* 53967: Completion/BSD/Command/_procstat,
	Completion/BSD/Command/_jexec, Completion/BSD/Command/_sockstat,
	Completion/Unix/Command/_sysctl, Completion/Unix/Command/_top,
	Completion/Unix/Command/_timeout, Completion/Unix/Command/_uniq:
	update completions affected by FreeBSD 14.3

	* 53966: Completion/Linux/Command/_networkmanager:
	update based on nmcli 1.52.0

2025-09-24  Oliver Kiddle  <opk@zsh.org>

	* Markus Kurtz: github #143: Completion/Unix/Command/_git:
	list only remote branches for `git checkout --guess`

	* Elliot Berman: github #142: Completion/Unix/Command/_git:
	fix text for git merge --squash/--no-squash

	* Christopher Bock: github #141 (tweaked):
	Completion/Debian/Command/_apt: complete apt why/why-not
