@@ -1,5 +1,8 @@
 2025-10-23  Oliver Kiddle  <opk@zsh.org>
 
+	* 53999: Src/module.c: remove further remnants of ansi2knr
+	support from AIX specific code
+
 	* 54000: Completion/BSD/Command/_bectl: new completion
 
 2025-10-21  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
